# mag-data

./: Cargo.toml
src/: fields.rs  filter_papers.rs  journals.rs  journals_wikidata_fields.rs  main.rs  paper_parser.rs  papers.rs  parse_journals.rs  types.rs  validate_papers.rs
