[package]
name = "mag-data"
version = "0.1.0"
authors = ["Anton Eriksson <anton.eriksson@umu.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.5"
serde = { version = "1.0.119", features = ["derive"] }
rdf = "0.1.4"